# ruivosolutions

./: package-lock.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
solutions/: admin.py  models.py  serializers.py  views.py
solutions/migrations/: 0001_initial.py  0002_caixa_clientes_funcionarios_itemestoque_and_more.py  0003_ferramenta_rename_clientes_cliente_and_more.py  0004_remove_caixa_gasto_remove_caixa_lucro_and_more.py
